# physical_education

./: .gitignore  .gitmodules  DEVELOPERS.md  LICENSE  README.md  __init__.py  __main__.py  argh.py  collocation.py  drag.py  foot.py  init_tools.py  leg.py  links.py  meta.py  motor.py  mypy.ini  pyproject.toml  symdef.py  system.py  tasks.py  template.py  utils.py  variable_list.py  visual.py
examples/: __init__.py  biped3D.py  monoped3D.py  quadruped3D.py  tasks.py
models/: __init__.py  biped3D.py  monoped3D.py  quadruped3D.py  tasks.py
physical_education/: __init__.py  __main__.py  analysis.py  base.py  collocation.py  constrain.py  damper.py  drag.py  foot.py  init_tools.py  links.py  meta.py  motor.py  node.py  spring.py  symdef.py  system.py  tasks.py  template.py  utils.py  variable_list.py  visual.py
physical_education/models/: __init__.py  biped3D.py  monoped3D.py  quadruped3D.py  tasks.py
stubs/matplotlib/: pyplot.pyi
stubs/matplotlib/pyplot/: __init__.pyi
stubs/pyomo/: __init__.pyi  environ.pyi
stubs/sympy/: __init__.pyi
